samples/_failures_safe/1761151783_c1906e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_006baa54.c: In function ‘print_stats’:
./samples/SAFE/__tmp_006baa54.c:142:5: error: expected declaration or statement at end of input
  142 |     printf("Log Analysis Results:\n");
      |     ^~~~~~
